# monit_cpu_mem_tcc

./: README.md  pyproject.toml
monit_cpu_mem/: main.py
