[tool.poetry]
name = "monit-cpu-mem"
version = "0.1.0"
description = ""
authors = ["Camila <bbatistacamila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
